Fix SonarCloud issue